# edusaas

./: .gitignore  docker-compose.yml
ai_api/: .gitignore  Dockerfile  main.py  requirements.txt
core_api/: .gitignore  Cargo.toml  Dockerfile
core_api/migrations/: 20251211_create_finance_payments.sql  20251230132300_add_auth_dates_to_bases.sql
core_api/src/: main.rs  middleware.rs  models.rs
core_api/src/handlers/: asset.rs  auth.rs  base.rs  class.rs  course.rs  customer.rs  customer_auth.rs  customer_honor.rs  customer_schedule.rs  dashboard.rs  enrollment.rs  finance.rs  health.rs  honor.rs  hq.rs  lead.rs  material.rs  membership.rs  mod.rs  participant.rs  procurement.rs  qrcode.rs  report.rs  room.rs  schedule_ai.rs  staff.rs  stock.rs  supply.rs  teacher.rs  tenant.rs  trial_class.rs  upload.rs  user.rs  workspace.rs
db/: init.sql  seed_workspace.sql
db/migrations/: 001_dashboard_tables.sql  002_workspace_tables.sql  add_hq_roles.sql  add_sales_tables.sql  add_trial_classes_table.sql
miniprogram/: app.js  app.json  app.wxss  package-lock.json  package.json  project.config.json  project.private.config.json
miniprogram/api/: hq.js
miniprogram/config/: index.js
miniprogram/pkg_customer/: app.wxss
miniprogram/services/: AuthService.js  AuthService_Customer.js  BaseService.js  CustomerService.js  FinanceService.js  LeadService.js  ReportService.js  ScanService.js  StaffService.js  UserService.js  request.js
miniprogram/store/: userStore.js
web_admin/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
(+298 files in other folders)
